# CapsGlow

./: Cargo.toml  README.md  build.rs
assets/: CapsGlow.exe.manifest.rc
src/: config.rs  font.rs  icon.rs  language.rs  main.rs  monitor.rs  single_instance.rs  startup.rs  theme.rs  tray.rs  uiaccess.rs  window.rs
src/tray/: mod.rs
src/tray/menu/: about.rs  handler.rs  item.rs  mod.rs
