[package]
name = "CapsGlow"
version = "0.3.0"
edition = "2024"
description = "Windows Capslock Indicator"
authors = ["iKineticate"]
license = "MIT License"
repository = "https://github.com/iKineticate/CapsGlow"

[dependencies]
winit = "0.30"
softbuffer = "0.4.6"
piet-common = "0.8.0"
bytemuck = "1.23.1"
tray-icon = "0.21.0"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
winreg = "0.55"
anyhow = "1"
rust-ini = "0.21"

[dependencies.windows]
version = "0.62.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    # uiaccess
    "Win32_Security",
    "Win32_System_Diagnostics",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
    "Win32_System_Environment",
    "Win32_System_Threading"
]

[build-dependencies]
embed-resource = "3.0.5"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"